# autoconf_samples

./: LICENSE
endian/: Makefile.am  configure.ac  endian.c
simple_lib/: Makefile.am  autogen.sh  clean.sh  configure.ac  simple.cc  simple_prog.cc
