AC_PREREQ([2.65])
LT_PREREQ([2.4.2])

AC_CONFIG_MACRO_DIR(m4)

AC_INIT([simple],[1.0])
LT_INIT

AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE
# AM_PROG_CC_C_O
AC_PROG_CXX

dnl AC_PROG_CC

AC_CONFIG_FILES([Makefile])
AC_CONFIG_HEADERS([config.h])

AC_OUTPUT

AS_ECHO
AS_ECHO([Results])
AS_ECHO
AS_ECHO(["$PACKAGE_STRING will be installed in: ${prefix}"])
AS_ECHO(["Use shared libs: $enable_shared"])
AS_ECHO(["Use static libs: $enable_static"])
